--- a/src/style.css
+++ b/src/style.css
@@ -8,8 +8,26 @@ body {
     display: flex;
     justify-content: center;
     gap: 20px;
-    font-family: Georgia, serif;
-    background-color: var(--background-grey);
+    font-family: Roboto, sans-serif;
+    /* background-color: black; */
+    margin: 0px;
+}
+
+body::before {
+    content: "";
+    position: absolute;
+    top: 0; 
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: .5; 
+    background-image: url('noodle-bkg.jpg');
+  }
+
+#content {
+    display: flex;
+    flex-direction: column;
 }
 
 #header {
@@ -18,29 +36,150 @@ body {
     justify-content: center;
     align-items: center;
     min-width: 100vw;
-    border: 1px solid green;
+    /* border: 1px solid green; */
+
+    height: 50px;
+    background-color: var(--primary-dark);
 }
 
 #navbar {
     display: flex;
-    gap: 10px;
+    gap: 30px;
+    color: var(--background-grey);  
+}
+
+.link {
+    cursor: pointer;
+    font-weight: bold;
+    letter-spacing: 5px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+
+    height: 40px;
+    width: 140px;
+
+    border-radius: 20px;
+    transition: all 250ms ease;  
+}
+
+.link:hover {
+    background-color: var(--background-grey);
+    color: var(--primary-dark);
 }
 
 #main {
     display: flex;
     justify-content: center;
-    border: 1px solid blue;
+}
+
+.section-container {
+    /* border: 1px solid black; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    width: 100vw;
+    height: 500px;
+
+    position: relative;
+    top: 100px;
+}
+
+#about-container {
+    /* border: 1px solid blue; */
+    text-align: center;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#logo {
+    width: 250px;
+    height: 250px;
+}
+
+#rest-title {
+    font-size: 40px;
+    letter-spacing: 4px;
+    margin-bottom: 40px;
+}
+
+#rest-description {
+    font-size: 18px;
+    height: 100px;
+    width: 600px;
+    line-height: 1.6;
+    /* font-weight: bold; */
+    /* opacity: 90%; */
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    /* border: 1px solid red; */
+    /* color: var(--primary-dark); */
+    color: var(--primary-dark);
+    text-shadow: 0 0 1px var(--primary-dark);
+    
 }
 
 .menu {
     display: flex;
-    gap: 10px;
+    gap: 120px;
+    
+    position: relative;
+    top: 100px;
+
+    width: 1000px;
+    height: 600px;
+
+    /* border: 1px solid green; */
+    background-color: white;
 }
 
-.picture {
+.dish {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+
     width: 300px;
-    height: 300px;
-    border: 1px solid black;
+    height: 450px;
+
+    position: relative;
+
+
+    /* border: 1px solid blue; */
+}
+
+.dish-picture {
+    width: 400px;
+    height: 400px;
+    
+    position: relative;
+    top: 0px;
+    /* border-radius: 50%; */
+    border: 1px solid black; 
+    /* background-color: var(--primary-dark); */
+}
+
+.dish-name {
+    /* color: white; */
+}
+
+.dish-description {
+    text-align: center;
+    /* color: white; */
+}
+
+.dish-cost {
+    position: absolute;
+    bottom: 0;
 }
 
 #footer {
@@ -56,7 +195,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 40px;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     gap: 10px;
 }
 
